# CCGM_Video_Recorder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/modules/model/: media_model.py  preach_model.py
src/modules/view/: main.qml
