[tool.poetry]
name = "CCGM_VIDEO_RECORDER"
version = "0.1.0"
description = ""
authors = ["Jinghua Lin <jinghualin@hotmail.com>"]
readme = "README.md"
packages = [{include = "CCGM_VIDEO_RECORDER"}]

[tool.poetry.dependencies]
python = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"